# artifact

./: .gitignore  ECOOP2022_AE_Submission_Document.md  README.md  demo.rmd
data/: gen.c  generate_csv.sh  generate_examples.sh  generate_psql.sh
experiments/: benchmark.Rmd  demo.rmd  membench.rmd
projects/altrep/: DESCRIPTION  README.md
projects/ufo-c/: Cargo.toml
projects/ufo-core/: .gitignore  Cargo.toml
projects/ufo-membench/: .Rhistory  .gitignore  Makefile  graphs.Rmd  membench.csv
projects/ufo-r/: .gitignore  DESCRIPTION
projects/ufo-r-vectors/: .gitignore  DESCRIPTION  README.md
projects/ufo-r-vectors/include/: ufo_r
projects/ufo-r/src/: ufo-core  ufo_c
vignettes/: generating_data.Rmd  ufo-r-programming.Rmd  ufo-r-vectors.Rmd
