[package]
name = "ufo_c"
version = "0.2.0"
authors = ["Can You <Make.Them@Go.Away>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
crossbeam = "0.8.0" 
libc = "0.2.80"
stderrlog = "0.5.1"
ufo_core = { path="../ufo-core", features = ["parallel_hashing"] }


[lib]
name = "ufo_c"
crate-type = ["dylib", "staticlib"]

[build-dependencies]
cbindgen = "0.18.0"
stderrlog = "0.5.1"

[profile.release]
lto = true # better optimizations

[source.crates-io]
replace-with = "vendored-sources"

[source."https://github.com/electroCutie/btree_interval_map"]
git = "https://github.com/electroCutie/btree_interval_map"
branch = "main"
replace-with = "vendored-sources"

[source."https://github.com/rust-lang/libc.git"]
git = "https://github.com/rust-lang/libc.git"
branch = "master"
replace-with = "vendored-sources"

[source."https://github.com/ufo-org/ufo-core.git"]
git = "https://github.com/ufo-org/ufo-core.git"
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
