[package]
name = "ufo_core"
version = "0.2.0"
authors = ["Redesign Your Logo <WeKnowHow@to.doit>"]
edition = "2018"

[features]
parallel_hashing = []
# low_level_ufos = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userfaultfd = "^0.4" # requires libclang
anyhow = "1.0.38"
blake3 = { version = "^1.2", features = ["rayon"] }
btree_interval_map = { git = "https://github.com/electroCutie/btree_interval_map", branch = "main" }
crossbeam = "^0.8"
itertools = "^0.10"
#libc = "^0.2"
libc = { git = "https://github.com/rust-lang/libc.git", branch = "master" }
log = "^0.4"
nix = "0.23"
num = "^0.3" # for One
promissory = "^0.1"
rayon = "^1.5"
semver = "^1.0"
thiserror = "^1.0"
uname = "0.1.1"
xorshift = "0.1.3"

# stderrlog = "0.5.1"


# [build-dependencies]
# cbindgen = "0.18.0"

# [build]
# target_os = "linux"


[profile.release]
lto = true # better optimizations

[source.crates-io]
replace-with = "vendored-sources"

[source."https://github.com/electroCutie/btree_interval_map"]
git = "https://github.com/electroCutie/btree_interval_map"
branch = "main"
replace-with = "vendored-sources"

[source."https://github.com/rust-lang/libc.git"]
git = "https://github.com/rust-lang/libc.git"
branch = "master"
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"